# repl-task

./: CMakeLists.txt  README.md
.github/: constants.env
.github/workflows/: cpp.yml
app/: CMakeLists.txt  main.cpp
ci-extra/: run-integration-tests.sh  test-valgrind.sh  test.sh
integration-tests/schemas/: bad-function-as-type.sc  bad-invalid-keyword.sc  bad-recursive-struct.sc  car.sc  numbers.sc  person-and-concat.sc  person.sc  point.sc  shop.sc
integration-tests/tests/: conftest.py  error_registry.py  repl_test.py
lib/: CMakeLists.txt  example.h
lib/rpc/: client.cpp  client.h
unit-tests/: CMakeLists.txt  example-test.cpp
